[package]
name = "doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
meilisearch-sdk = "0.24.3"
# futures: because we want to block on futures
futures = "0.3"
# serde: required if you are going to use documents
serde = { version="1.0",   features = ["derive"] }
# serde_json: required in some parts of this guide
serde_json = "1.0"
async-std = {version="1.10.0", features = ["attributes"]}
once_cell = "1.17.1"
anyhow = "1.0.0"
